[gd_scene load_steps=6 format=2]

[ext_resource path="res://Images/Lined.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Level Select.gd" type="Script" id=2]
[ext_resource path="res://Font/Rawengulksans.tres" type="DynamicFont" id=3]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -215.325, 83.5953 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -20.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 311, -27 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:rect_rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 12.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Slide"
length = 1.2
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -215.325, 83.5953 ), Vector2( -293.619, 85.9238 ), Vector2( -447.727, 264.028 ), Vector2( -527.902, 360.98 ), Vector2( -599.423, 381.103 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextureRect:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -20.0, -10.0, -45.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.5, 1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 311, -27 ), Vector2( 311, -27 ), Vector2( 685, 10 ), Vector2( 1064, 18 ), Vector2( 1214, 65 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:rect_rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 12.0, 22.0, 30.0 ]
}

[node name="Level Select" type="TextureRect"]
margin_left = 311.0
margin_top = -27.0
margin_right = 513.0
margin_bottom = 223.0
rect_rotation = 12.0
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -215.325
margin_top = 83.5953
margin_right = -13.3249
margin_bottom = 333.596
rect_rotation = -20.0
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.3
margin_left = -49.7646
margin_top = 3.76313
margin_right = 250.235
margin_bottom = 53.7631
rect_scale = Vector2( 0.33, 0.33 )
rect_pivot_offset = Vector2( 30, 0 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = ExtResource( 3 )
text = "Levels"

[node name="Spanish I" type="ColorRect" parent="."]
margin_left = 32.2362
margin_top = 33.0193
margin_right = 132.236
margin_bottom = 53.0193
rect_scale = Vector2( 0.67, 0.67 )
color = Color( 0.803922, 0.803922, 0.803922, 1 )

[node name="Spanish" type="Button" parent="Spanish I"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -3.05176e-05
margin_right = 100.0
margin_bottom = 20.0
text = "Spanish"
icon_align = 1

[node name="Label" type="Label" parent="Spanish I"]
margin_right = 100.0
margin_bottom = 20.0
rect_scale = Vector2( 0.37, 0.37 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Spanish I"
align = 1

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 56.3206
margin_top = 208.854
margin_right = 156.321
margin_bottom = 228.854
rect_scale = Vector2( 0.67, 0.67 )
color = Color( 0.803922, 0.803922, 0.803922, 1 )

[node name="Select Custom" type="Button" parent="ColorRect2"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -3.05176e-05
margin_right = 100.0
margin_bottom = 20.0
text = "pingas"
icon_align = 1

[node name="Label" type="Label" parent="ColorRect2"]
margin_right = 286.0
margin_bottom = 55.0
rect_scale = Vector2( 0.35, 0.37 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Select Custom"
align = 1

[node name="FileDialog" type="FileDialog" parent="."]
margin_left = -32.6996
margin_top = 64.2016
margin_right = 467.3
margin_bottom = 564.202
window_title = "Open a File"
dialog_text = "Select a level"
dialog_hide_on_ok = true
mode = 0
access = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
anims/Slide = SubResource( 2 )

[connection signal="pressed" from="Spanish I/Spanish" to="." method="_on_Spanish_pressed"]
[connection signal="pressed" from="ColorRect2/Select Custom" to="." method="_on_Select_Custom_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_FileDialog_file_selected"]
